@@ -1,8 +1,5 @@
 package de.bwaldvogel.mongo.backend;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.Set;
 
 public interface Constants {
@@ -12,6 +9,6 @@ public interface Constants {
 
     int MAX_NS_LENGTH = 128;
 
-    Set<String> REFERENCE_KEYS = Collections.unmodifiableSet(new LinkedHashSet<>(Arrays.asList("$ref", "$id")));
+    Set<String> REFERENCE_KEYS = Set.of("$ref", "$id");
 
 }
